Fix month names are not fully visible - they were covered by end of month filler

--- a/calendar/templates/default/app.css
+++ b/calendar/templates/default/app.css
@@ -1158,6 +1158,7 @@ Hide subsequent headers in week view with non-consolidated owners
 .calendar_eventRowsFiller {
 	position: absolute;
 	top: 0px;
+	right: 0px;
 	height: 93%;
 	background-color: white;
 	border: 1px dashed gray;
